--- a/assets/index.html
+++ b/assets/index.html
@@ -12,19 +12,19 @@
   
   <nav>
       <div class="container mx-auto px-6 py-16 flex justify-between items-center">
-        <a class="text-6xl lg:text-6xl font-thin tracking-widest dark:text-gray-100" href="#">
+        <a class="text-6xl lg:text-6xl font-thin tracking-widest text-gray-100" href="#">
         cycls
         </a>
         <div class="block sm:hidden">
             <ul>
-              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline dark:text-gray-300" href="#">CAREERS</a></li>
-              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline dark:text-gray-300" href="#">CONTACT</a></li>
+              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline text-gray-300" href="#">CAREERS</a></li>
+              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline text-gray-300" href="#">CONTACT</a></li>
             </ul>
         </div>
         <div class="hidden sm:block">
             <ul class="inline-flex">
-              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline dark:text-gray-300" href="#">CAREERS</a></li>
-              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline dark:text-gray-300" href="#">CONTACT</a></li>
+              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline text-gray-300" href="#">CAREERS</a></li>
+              <li><a class="px-3 tracking-wide hover:text-gray-100 hover:underline text-gray-300" href="#">CONTACT</a></li>
             </ul>
         </div>
       </div>
